...
    }
    
    //MARK: - Описание действия кнопки выхода из профиля пользователя
    
    @objc
    private func didTapExitProfileButton() {
        let alert = UIAlertController(title: "Выход", message: "Выйти из Вашего профиля?", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Да", style: .default, handler: { [weak self] _ in
            guard let self = self else { return }
            profilePresenter.exitProfile()
        }))
        
        alert.addAction(UIAlertAction(title: "Нет", style: .default))
        self.present(alert, animated: true)
...
